--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ header{
 header img{
     border-color: #000;
     border-style: solid;
+    margin-left: 90%;
+    margin-top: -73px;
+    background-color: #fff;
 }
 
 header h2{
@@ -25,10 +28,52 @@ header h2{
     color: #fff;
     padding: 5px;
     text-align: center;
-    margin-top: 61px;
+    margin-top: 12px;
 }
 
 header h1{
     height: 450px;
     font-size: 4em;
+}
+
+nav div{
+    display: inline-grid;
+    font-size: 30px;
+}
+
+nav div a{
+    padding-top: 40px;
+    padding-bottom: 40px;
+    text-decoration: none;
+}
+
+main{
+    display: inline-block;
+    float: left;
+    position: absolute;
+    left: 543px;
+    top: 543px;
+}
+
+main article{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+main img{
+    position: absolute;
+    left: 582px;
+    top: 66px;
+    right: 142;
+    filter: drop-shadow;
+    border-radius: 35px;
+}
+
+main.about img{
+    position: static;
+}
+
+main .contact{
+    font-size: 24px;
+    margin-top: 87px;
 }
