--- a/css/style2.css
+++ b/css/style2.css
@@ -27,19 +27,21 @@ header img{
 }
 
 header h2{
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     padding: 5px;
     text-align: center;
     margin-top: 12px;
     position: relative;
     top: 75%;
+    border:solid #000
 }
 
 header h1{
     font-size: 4em;
     position: relative;
     top: -90px;
+    font-family: cursive;
 }
 
 nav div{
@@ -55,8 +57,52 @@ nav div a{
     text-decoration: none;
     margin: 0 7px;
     color: #fff;
+    font-family: cursive;
 }
 
-nav div a:hover{
+nav div a:hover {
     background-color: darkcyan;
 }
+
+nav div .select{
+    background-color: darkcyan;
+} 
+
+main{
+    display: inline-block;
+    float: left;
+    position: absolute;
+    left: 543px;
+    top: 598px;
+}
+
+main article{
+    padding-top: 40px;
+    padding-bottom: 40px;
+    font-family: cursive;
+}
+
+main img{
+    position: absolute;
+    left: 557px;
+    top: 275px;
+    filter: drop-shadow;
+    border-radius: 18px 106px 112px;
+}
+
+main.about img{
+    position: static;
+}
+
+main .contact{
+    font-size: 24px;
+    margin-top: 67px;
+    font-family: cursive;
+}
+
+main .contact img{
+    position: absolute;
+    left: 557px;
+    top: -211px;
+    border-radius: 18px 106px 112px;
+    }
