--- a/css/style3.css
+++ b/css/style3.css
@@ -17,14 +17,13 @@ header{
 }
 
 header h2{
-    background-color: #fff;
-    color: #000;
-    padding: 5px;
-    text-align:start;
-    margin-top: -20px;
-    font-family: cursive;
+    margin: 0px 0px 0px 20px;
+    padding: 17px 34px;
     display: inline-block;
-
+    color: #fff;
+    background-color: #000;
+    border-radius: 0 0px 13px 13px;
+    text-shadow: 1px 1px 2px black;
 }
 
 header h1{
@@ -36,10 +35,14 @@ header h1{
 }
 
 header img{
-    margin-left: 33%;
+
     margin-top: -210px;
-    background-color: #fff;
+    background-color: #0000008a;
     width: 199px;
+    position: absolute;
+    left: 43%;
+    border-radius: 32px;
+    top: 228px;
 }
 
 nav div{
@@ -49,19 +52,30 @@ nav div{
 }
 
 nav div a{
-    padding: 6px 15px;
+    padding: 8px 15px;
     text-decoration: none;
     margin: 0 7px;
-    color: #000;
+    color: #fff;
     font-family: cursive;
+    background-color: #0000008a;
+    border-radius: 0 0px 13px 13px;
+    text-shadow: 1px 1px 2px black;
+    
+}
+
+nav div a:hover{
+    background-color: #000;
 }
 
 main{
     display: inline-block;
-    float: left;
     position: absolute;
     left: 97px ;
     top: 353px;
+}
+main div{
+    float: left;
+    width: 60%;
 }
 
 main article{
@@ -69,23 +83,37 @@ main article{
     padding-bottom: 40px;
     font-family: cursive;
     font-size: large;
-    border-block-end-style: dashed;
+    background-color: #b9b9b98a;
+    margin-bottom: 33px;
+    padding-left: 30px;
+    border-radius: 0px 52px 0px 52px;
 }
 
+main figure{
+    width: 39%;
+    float: left;
+}
 main img{
-    position: absolute;
-    left: 582px;
-    top: 66px;
-    right: 142;
-    filter: drop-shadow;
-    border-radius: 35px;
-}
-
-main.about img{
-    position: static;
+    border-radius: 35px; 
+    width: 98%;
+    margin-top: 5%;
+    margin-left: 2%;
 }
 
 main .contact{
     font-size: 24px;
     margin-top: 87px;
+} 
+
+article h3 {
+    position: relative;
+    top: -40px;
+    background-color: #000;
+    color: #fff;
+    width: 173px;
+    left: -30px;
+    text-align: center;
+    padding: 6px;
+    border-radius: 0px 52px 0px 52px;
+
 }
