--- a/css/style3.css
+++ b/css/style3.css
@@ -68,15 +68,19 @@ nav div a:hover{
 }
 
 main{
-    display: inline-block;
-    position: absolute;
-    left: 97px ;
-    top: 353px;
+    display: block;
+    position: relative;
+    left: 97px;
+    top: 91px;
 }
 main div{
     float: left;
     width: 60%;
 }
+main.rules div, main.game div{
+    width: 95%;
+}
+
 
 main article{
     padding-top: 40px;
@@ -100,10 +104,19 @@ main img{
     margin-left: 2%;
 }
 
-main .contact{
+main div.contact{
     font-size: 24px;
     margin-top: 87px;
+    width: 40%;
 } 
+
+main.game div table tbody{
+    text-align: center;
+}
+
+main.game div table{
+    width: 83%;
+}
 
 article h3 {
     position: relative;
