--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ main > form > fieldset > div {
     margin: 8px 0px;
 }
 
-fieldset label input[type=checkbox]{
+fieldset label input[type=checkbox], [type=radio]{
     min-width: 0%;
 }
 
@@ -269,4 +269,37 @@ main form input[type=submit]:hover{
 fieldset#Permission{
     padding-bottom: 0px;
     margin-bottom: 0px;
+}
+
+/* mapas */
+
+main div iframe{
+    width: 100%;
+    height: 125%;
+    height: 44rem;
+    margin: 3rem 0rem;
+}
+
+div.mapas{
+    display: flex;
+    flex-direction: column;
+}
+div.mapas div{
+    text-align: center;
+}
+td a img{
+    width: 2.5rem;
+}
+
+main.game div table tr td:last-child{
+    padding: 0px;
+}
+
+div.mapas div a{
+    text-decoration: none;
+    background-color: #5fa199;
+    color: #fff;
+    text-shadow: 1px 1px 2px black;
+    padding: 1rem;
+    border-radius:1rem ;
 }
